[package]
name = "akatsuki-pp-py"
version = "1.0.5"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
murasame-pp = { git = "https://github.com/murasameosu/murasame-pp-rs", rev = "100da2bac10dba689c50effa420f6e2a60d9a996" }
pyo3 = { version = "0.17", features = ["extension-module","macros"] }


[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
